# devsecops-ai-project

./: .gitignore  README.md
.github/workflows/: eks-infra-deployment.yml  eks_infra_deployment.yaml
Deployment_Automation/argo_testings_ingresses/: auto_image_updater_configmap.yaml  ecr-policy.json  trust-policy.json
GithubRunner_EC2/: githubactions_pipeline.txt  imagetag_scrpt.yaml  store_app.pem
aws_eks_infrastructure/: README.md  s3-backend.md
helm-charts/ai-service/: Chart.yaml  values.yaml
helm-charts/makeline-service/: Chart.yaml  values.yaml
helm-charts/mongodb/: Chart.yaml  values.yaml
helm-charts/order-service/: Chart.yaml  values.yaml
helm-charts/product-service/: Chart.yaml  values.yaml
helm-charts/rabbitmq/: Chart.yaml  values.yaml
r3solutions/src/product-service/: Cargo.toml  Dockerfile  README.md  WASM_RULES_ENGINE.md  config.yml  rule_engine.wit  test-product-service.http
r3solutions/src/product-service/crates/sample-rule/: Cargo.toml
r3solutions/src/product-service/crates/sample-rule/src/: lib.rs
r3solutions/src/product-service/crates/second-rule/: Cargo.toml
r3solutions/src/product-service/crates/second-rule/src/: lib.rs
r3solutions/src/product-service/src/: configuration.rs  data.rs  lib.rs  main.rs  model.rs  startup.rs  tracing_setup.rs
r3solutions/src/product-service/src/localwasmtime/: host.rs  mod.rs  rules_engine_state.rs
r3solutions/src/product-service/src/routes/: add.rs  ai.rs  delete.rs  get.rs  health.rs  mod.rs  update.rs
r3solutions/src/product-service/tests/: base_product_service.rs  common.rs
(+228 files in other folders)
