[package]
name = "product-service"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "product-service"

[lib]
name = "product_service"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
log = "0.4.22"
futures-util = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-15.0.0", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-15.0.0" }
ctor = "0.2.8"

# APM tracing dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-datadog = { version = "0.8", features = ["reqwest-client"] }
tracing-opentelemetry = "0.21"
tokio = { version = "1.39", features = ["rt-multi-thread"] }